[tool.poetry]
name = "Hearthbot"
version = "0.1.0"
description = "Just another QQ bot for Hearthstone"
license = "AGPL-3.0-or-later"
authors = ["ZelKnow <shenghuang@stu.pku.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0.a14"
nb-cli = "^0.5.0"
nonebot-adapter-cqhttp = "^2.0.0-alpha.14"
hearthstone = "^5.40.4"
Pillow = "^8.3.1"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
nonebot-plugin-test = "^0.3.0"
yapf = "^0.31.0"

[nonebot.plugins]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
